# Applications

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  README.md  TODO.md
.claude/: launch.json
.claude/agents/: nc-750-build-mirror-frontend.md  nc-750-challenge.md  nc-750-ethos-gate.md  (+4 more)
.rationale-log/: 20260623-113200-settings_ui_info_plan.json  20260623-113800-settings_ui_action_result_display.json  20260623-114700-skills-update.json  20260623-120000-actionstatus-test-strategy.json  20260624-002636-three-commit-scoping.json  20260624-002637-combined-build-review.json  20260624-002638-finish-job-respawn.json  20260624-002639-convention-single-source.json  20260624-044445-env-blocker-not-relooped.json  20260624-055306-accept-save-error-residual.json  20260624-060000-onSave-stale-error-snapshot.json  20260624-061427-wall-breach-direct-fix.json  20260624-121700-skills-update.json  20260624-123000-phase2-test-mock-strategy.json  20260625-120000-skill-hardening-parallel-agents.json  20260625-140000-agent-hardening.json  NOTES.md  README.md  YYYYMMDD-HHMMSS-template.json
Devenv/: devenv.nix
Mirror/: .gitignore
brand/: BRAND.md  ETHOS.md  VISUAL_IDENTITY.md
enclosure/: CLAUDE.md  DESIGN.md  DESIGN_USE.md  PRODUCT.md
lab/: CLAUDE.md  DESIGN.md  DESIGN_USE.md  PHASE2_PLAN.md  PRODUCT.md  lab.css  package.json
lab/generator-app/src-tauri/: Cargo.toml  tauri.conf.json
lab/generator-app/src-tauri/capabilities/: default.json
lab/generator-app/src-tauri/src/: main.rs
mirror/: .gitignore  DESIGN.md  MEASUREMENT.md  PRODUCT.md  description.txt  mirror-insight.skill  persona-interview.skill  persona-profile.skill
mirror/app/src-tauri/: Cargo.toml  tauri.conf.json
mirror/app/src-tauri/src/: lib.rs  main.rs
(+755 files in other folders)
